# cognee-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  repo_processor.py  test_typescript_extractor.py
docs/: PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_USAGE_GUIDE.md  TYPESCRIPT_IMPLEMENTATION_REQUIREMENTS.md  TYPESCRIPT_SUPPORT.md
tests/: test_comprehensive.py  test_phase4_features.py  test_typescript_extractor.py  validate_typescript_support.py
tests/test_monorepo/: README.md
tests/test_monorepo/python/: main.py  utils.py
tests/test_monorepo/typescript/: index.ts
tests/test_monorepo/typescript/components/: Button.tsx
tests/test_monorepo/typescript/types/: index.ts
typescript_extractor/: README.md  __init__.py  extractor.py  models.py  node_handlers.py  parser.py
